<resources>
    <string name="app_name">posts-app</string>
    <string name="title_home">Home</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_notifications">Notifications</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="network_error">Network error</string>
    <string name="unknown_host_exception">No internet connection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_author">About the Author</string>
    <string name="name">Name: %s</string>
    <string name="username">Username: %s</string>
    <string name="email">Email: %s</string>
    <string name="street">Street: %s</string>
    <string name="suite">Suite: %s</string>
    <string name="city">City: %s</string>
    <string name="phone">Phone: %s</string>
    <string name="website">Website: %s</string>
    <string name="catch_phrase">Catch phrase: %s</string>
    <string name="company_name">Company name: %s</string>
    <string name="database_error">Cannot access to database</string>
    <string name="unknown_sql_exception">A query error has occurred</string>
    <string name="added_to_favourite">Added to favourites</string>
    <string name="remove_from_favourite">Removed from favourites</string>
    <string name="delete_all_posts">Delete all posts</string>
    <string name="action_delete_posts">Delete all posts</string>
    <string name="confirm_delete_message">Delete all posts?</string>
    <string name="error_message">An error has ocurred!</string>
    <string name="confirm_message">Confirm</string>
    <string name="posts_deleted_correctly">Posts deleted correctly</string>
</resources>